<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="org.marco.planets.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_weight="9"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="8"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/planet_imagen_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/planet_nombre2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_distancia_sol2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distanciaSol"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_relacion_tierra2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relacion_tierra"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_volumen2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/volumen"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_masa2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/masa"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_satelites_naturales2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/satelites_naturales"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_velocidad_escape2_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/velocidad_escape"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="25sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="8"
            tools:ignore="NestedWeights">

            <ImageView
                android:id="@+id/planet_simbolo_image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/planet_nombre_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/planet_distancia_sol_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/planet_relacion_tierra_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/planet_volumen_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/planet_masa_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/planet_satelites_naturales_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/planet_velocidad_escape_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
